--- a/CSS/z.html
+++ b/CSS/z.html
@@ -1,21 +1,15 @@
-<!-- <!DOCTYPE html>
-<html>
-    <head>
-        <title> first web page</title>
-    </head>
-
-    <body>
-        <p>this is first web page from vs.</p>
-    </body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="x.css"/>
 </head>
 <body>
-    
+    <h1>hello</h1>
+    <div class="pic">
+    <h2>Hi</h2>
+    </div>
 </body>
 </html>
