--- a/Elements.html
+++ b/Elements.html
@@ -4,6 +4,14 @@
        <title>web page</title> 
     </head>
     <body>
-        <p>this is web page</p>
+       <table border="1">
+        <thead>
+            <tr>
+                <td>s.No</td>
+                <td>name</td>
+                <td>marks</td>
+            </tr>
+        </thead>
+       </table>
     </body>
 </html>
